--- a/post/2020-12-01-r-rmarkdown/index.en.Rmd
+++ b/post/2020-12-01-r-rmarkdown/index.en.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "A new life in Christ"
-author: "faith blog"
+author: "admin"
 date: "`r Sys.Date()`" 
 categories: ["R"]       
 tags: ["faith", "salvation"]
@@ -10,7 +10,6 @@ tags: ["faith", "salvation"]
 
 ![](cross.png) 
 
-<b> Thank God! </b>
 It is possible to live a life of dominion, constant victory, and triumph. It is possible that you are always happy and never depressed. It is possible that you never fall sick and never have to visit the doctor. You may be so healthy that you never have to take drugs with negative side effects. You may be at constant peace with your family and children that you never have to worry about them. You may live in prosperity that you don’t have to struggle or work long hours to provide for yourself and family. You can have your dream job and that will bring you much more satisfaction. You can have all your heart’s desire – good relationships, love, success, strength, joy, riches, health and so on. No matter how sweet and wonderful your life may seem now, things can be better and even more sweet and wonderful. A life of peace, victory and joy awaits you in Christ. 
 
 Christ died and resurrected to provide us with all the good things of life and all He did was for our sake. *“… that whosoever believes in Him should not perish but have everlasting life”*   [(John 3:16)](). Through the acceptance of Christ, we live a life of dominion, constant victory, and triumph [(I John 5:4-5)](). In the beginning, Adam our forefather sinned against God by disobeying His instruction. Adam was living a life of dominion but after he sinned and didn’t repent for his sins, his life was changed to death which is the consequence of the sin he committed. Jesus Christ died and satisfied the claims of justice to restore this life back to us and that we may have it abundantly, even as Adam had it before he sinned [(John 10:10)](). 
